--- a/html/index.html
+++ b/html/index.html
@@ -2,13 +2,25 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>XXX</title>
+    <title>Grenada</title>
     <script src="https://kit.fontawesome.com/fa7d412e6b.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="http://ww2.peppercat.org/stylesheet.css">
   </head>
   <body>
-    <h1>XXX</h1>
+    <h1>Grenada</h1>
     <table>
+      <tr>
+        <td>monarch</td>
+        <td>Charles III</td>
+      </tr>
+      <tr>
+        <td>Governor General</td>
+        <td>Cécile La Grenade</td>
+      </tr>
+      <tr>
+        <td>Prime Minister</td>
+        <td>Dickon Mitchell</td>
+      </tr>
       <tr>
         <td colspan="2" class="download"><a class="fas fa-file-download" href="current.csv"> CSV</a></td>
       </tr>
