--- a/html/index.html
+++ b/html/index.html
@@ -22,6 +22,14 @@
         <td>Dickon Mitchell</td>
       </tr>
       <tr>
+        <td>Minister of Foreign Affairs<br />Minister of Tourism, Civil Aviation & Culture</td>
+        <td>Peter David</td>
+      </tr>
+      <tr>
+        <td>Minister of Foreign Affairs</td>
+        <td>Joseph Andall</td>
+      </tr>
+      <tr>
         <td colspan="2" class="download"><a class="fas fa-file-download" href="current.csv"> CSV</a></td>
       </tr>
     </table>
