--- a/html/index.html
+++ b/html/index.html
@@ -18,16 +18,60 @@
         <td>Cécile La Grenade</td>
       </tr>
       <tr>
-        <td>Prime Minister</td>
+        <td>Prime Minister<br />Minister of Finance<br />Minister of National Security, Home Affairs, and Public Administration</td>
         <td>Dickon Mitchell</td>
       </tr>
       <tr>
-        <td>Minister of Foreign Affairs<br />Minister of Tourism, Civil Aviation & Culture</td>
-        <td>Peter David</td>
+        <td>Minister of Carriacou and Petit Martinique Affairs</td>
+        <td>Tevin Andrews</td>
+      </tr>
+      <tr>
+        <td>Minister of Climate Resilience, Environment and Energy</td>
+        <td>Kerryne Zennelle James</td>
+      </tr>
+      <tr>
+        <td>Minister of Economic Development and Planning</td>
+        <td>Lennox John Andrews</td>
+      </tr>
+      <tr>
+        <td>Minister of Education, Youth and Sports Affairs</td>
+        <td>David Evlyn Andrew</td>
       </tr>
       <tr>
         <td>Minister of Foreign Affairs</td>
         <td>Joseph Andall</td>
+      </tr>
+      <tr>
+        <td>Minister of Health, Wellness and Religious Affairs</td>
+        <td>Gayton Jonathan Lacrette</td>
+      </tr>
+      <tr>
+        <td>Minister of Infrastructure and Physical Development</td>
+        <td>Dennis Cornwall</td>
+      </tr>
+      <tr>
+        <td>Minister of Legal, Labour and Consumer Affairs<br />Attorney General</td>
+        <td>Claudette Joseph</td>
+      </tr>
+      <tr>
+        <td>Minister of Mobilisation, Implementation and Transformation</td>
+        <td>Andy Williams</td>
+      </tr>
+      <tr>
+        <td>Minister of Social, Community Development, Housing and Gender Affairs</td>
+        <td>Phillip Alfred Telesford</td>
+      </tr>
+      <tr>
+        <td>Minister of State with responsibility for Agriculture</td>
+        <td>Adrian Augustine Thomas</td>
+      </tr>
+      <tr>
+        <td>Minister of State with responsibility for Social Development and Gender Affairs</td>
+        <td>Gloria Ann Thomas</td>
+      </tr>
+      <tr>
+        <td>Minister of State with responsibilty for Youth and Sports</td>
+        <td>Ron Livingston Redhead</td>
       </tr>
       <tr>
         <td colspan="2" class="download"><a class="fas fa-file-download" href="current.csv"> CSV</a></td>
